--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     <a *ngFor="let todo of todos" class="col-1-4"
         routerLink="/detail/{{todo.id}}">
         <div class="module todo">
-            <h4>{{todo.name}}</h4>
+            <h4>{{todo.text}}</h4>
         </div>
     </a>
 </div>
