--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,4 +1,4 @@
-<h2>My Todos</h2>
+<h2 *ngIf="todos.length else notodos">My Todos</h2>
 <div>
     <label>Todo text:
         <input #todoText />
@@ -17,3 +17,4 @@
     </li>
 </ul>
 
+<ng-template #notodos><h2>You have not todos yet</h2></ng-template>
