added simple reactive form (not nesessary) and ane more form component to add todos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <nav>
   <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/todos">Todos</a>
+  <a routerLink="/add-todo">Add todo</a>
 </nav>
 <router-outlet></router-outlet>
