--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,12 +1,15 @@
-<h3 *ngIf="todos.length else notodos">Newest Todos</h3>
+<h3 *ngIf="todos.length; else notodos">Newest Todos</h3>
 <div class="grid grid-pad">
-    <a *ngFor="let todo of todos" class="col-1-4"
-        routerLink="/detail/{{todo.id}}">
+    <div *ngFor="let todo of todos" class="col-1-4">
+        <a routerLink="/detail/{{todo.id}}">
         <div class="module todo">
             <h4>{{todo.text}}</h4>
         </div>
-    </a>
+    </a>  
+    </div>
+       
 </div>
+
 <app-todo-search></app-todo-search>
 
 <ng-template #notodos><h3>You have not todos yet</h3></ng-template>
