--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<h1>{{ title }}</h1>
-<nav>
-  <a routerLink="/dashboard">Dashboard</a>
-  <a routerLink="/todos">Todos</a>
-  <a routerLink="/add-todo">Add todo</a>
-</nav>
+<app-header></app-header>
 <router-outlet></router-outlet>
